[gd_scene load_steps=16 format=3 uid="uid://8u5y22g0gji1"]

[ext_resource type="Script" path="res://ui/levelUI/LevelUI.gd" id="1_rii2h"]
[ext_resource type="Theme" uid="uid://bm00mxxnom0na" path="res://ui/uiTheme.tres" id="2_p2olj"]
[ext_resource type="Shader" path="res://asset/shader/outline_with_modulate.gdshader" id="3_swfyv"]
[ext_resource type="Texture2D" uid="uid://05lrthggrwfk" path="res://asset/ui/MonedaR.png" id="4_opot5"]
[ext_resource type="Texture2D" uid="uid://duyc66ghlyvjq" path="res://asset/ui/gem.png" id="5_wv2et"]
[ext_resource type="Texture2D" uid="uid://ce20rr8rjyd62" path="res://asset/ui/cat ui test.png" id="6_xo5tj"]
[ext_resource type="Texture2D" uid="uid://c0yubmwoidxd8" path="res://asset/ui/goldCoin.png" id="7_m2a3c"]
[ext_resource type="Texture2D" uid="uid://p1of5lj6w0tl" path="res://asset/ui/Icon_Menu.png" id="8_hqbv5"]
[ext_resource type="Texture2D" uid="uid://bqlqmtyx20utl" path="res://asset/ui/Icon_X.png" id="9_3b2yp"]
[ext_resource type="Texture2D" uid="uid://ru3pu1gvkecp" path="res://asset/ui/Button_normal.png" id="10_yo2uh"]
[ext_resource type="Texture2D" uid="uid://do43xfipjh5bc" path="res://asset/ui/Button_focus.png" id="11_jb2vj"]
[ext_resource type="PackedScene" uid="uid://ug6dcwplmet0" path="res://ui/settingMenu/SettingMenu.tscn" id="12_vl4ng"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1kl7s"]
shader = ExtResource("3_swfyv")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/width = 1.0
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n02en"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c4d25"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="LevelUI" type="CanvasLayer"]
process_mode = 3
layer = 3
script = ExtResource("1_rii2h")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_p2olj")

[node name="ColorRect" type="ColorRect" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.364706, 0.364706, 0.364706, 0.588235)

[node name="FirstRow" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 200.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/FirstRow"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="Control/FirstRow/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="HBoxContainer" type="HBoxContainer" parent="Control/FirstRow/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 50

[node name="RedCoinContainer" type="HBoxContainer" parent="Control/FirstRow/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="RedCoin1" type="TextureRect" parent="Control/FirstRow/MarginContainer/VBoxContainer/HBoxContainer/RedCoinContainer"]
modulate = Color(0, 0, 0, 0.0196078)
material = SubResource("ShaderMaterial_1kl7s")
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
texture = ExtResource("4_opot5")
expand_mode = 1

[node name="RedCoin2" type="TextureRect" parent="Control/FirstRow/MarginContainer/VBoxContainer/HBoxContainer/RedCoinContainer"]
modulate = Color(0, 0, 0, 0.0196078)
material = SubResource("ShaderMaterial_1kl7s")
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
texture = ExtResource("4_opot5")
expand_mode = 1

[node name="RedCoin3" type="TextureRect" parent="Control/FirstRow/MarginContainer/VBoxContainer/HBoxContainer/RedCoinContainer"]
modulate = Color(0, 0, 0, 0.0196078)
material = SubResource("ShaderMaterial_1kl7s")
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
texture = ExtResource("4_opot5")
expand_mode = 1

[node name="RedCoin4" type="TextureRect" parent="Control/FirstRow/MarginContainer/VBoxContainer/HBoxContainer/RedCoinContainer"]
modulate = Color(0, 0, 0, 0.0196078)
material = SubResource("ShaderMaterial_1kl7s")
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
texture = ExtResource("4_opot5")
expand_mode = 1

[node name="RedCoin5" type="TextureRect" parent="Control/FirstRow/MarginContainer/VBoxContainer/HBoxContainer/RedCoinContainer"]
modulate = Color(0, 0, 0, 0.0196078)
material = SubResource("ShaderMaterial_1kl7s")
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
texture = ExtResource("4_opot5")
expand_mode = 1

[node name="GemContainer" type="HBoxContainer" parent="Control/FirstRow/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 8

[node name="Gem1" type="TextureRect" parent="Control/FirstRow/MarginContainer/VBoxContainer/HBoxContainer/GemContainer"]
modulate = Color(0, 0, 0, 0.0196078)
material = SubResource("ShaderMaterial_1kl7s")
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
texture = ExtResource("5_wv2et")
expand_mode = 1

[node name="Gem2" type="TextureRect" parent="Control/FirstRow/MarginContainer/VBoxContainer/HBoxContainer/GemContainer"]
modulate = Color(0, 0, 0, 0.0196078)
material = SubResource("ShaderMaterial_1kl7s")
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
texture = ExtResource("5_wv2et")
expand_mode = 1

[node name="Gem3" type="TextureRect" parent="Control/FirstRow/MarginContainer/VBoxContainer/HBoxContainer/GemContainer"]
modulate = Color(0, 0, 0, 0.0196078)
material = SubResource("ShaderMaterial_1kl7s")
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
texture = ExtResource("5_wv2et")
expand_mode = 1

[node name="Gem4" type="TextureRect" parent="Control/FirstRow/MarginContainer/VBoxContainer/HBoxContainer/GemContainer"]
modulate = Color(0, 0, 0, 0.0196078)
material = SubResource("ShaderMaterial_1kl7s")
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
texture = ExtResource("5_wv2et")
expand_mode = 1

[node name="Gem5" type="TextureRect" parent="Control/FirstRow/MarginContainer/VBoxContainer/HBoxContainer/GemContainer"]
modulate = Color(0, 0, 0, 0.0196078)
material = SubResource("ShaderMaterial_1kl7s")
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
texture = ExtResource("5_wv2et")
expand_mode = 1

[node name="CatContainer" type="HBoxContainer" parent="Control/FirstRow/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Cat1" type="TextureRect" parent="Control/FirstRow/MarginContainer/VBoxContainer/HBoxContainer/CatContainer"]
modulate = Color(0, 0, 0, 0.0196078)
material = SubResource("ShaderMaterial_1kl7s")
custom_minimum_size = Vector2(45, 36)
layout_mode = 2
texture = ExtResource("6_xo5tj")

[node name="Cat2" type="TextureRect" parent="Control/FirstRow/MarginContainer/VBoxContainer/HBoxContainer/CatContainer"]
modulate = Color(0, 0, 0, 0.0196078)
material = SubResource("ShaderMaterial_1kl7s")
custom_minimum_size = Vector2(45, 36)
layout_mode = 2
texture = ExtResource("6_xo5tj")

[node name="Cat3" type="TextureRect" parent="Control/FirstRow/MarginContainer/VBoxContainer/HBoxContainer/CatContainer"]
modulate = Color(0, 0, 0, 0.0196078)
material = SubResource("ShaderMaterial_1kl7s")
custom_minimum_size = Vector2(45, 36)
layout_mode = 2
texture = ExtResource("6_xo5tj")

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/FirstRow/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 37

[node name="GoldContainer" type="HBoxContainer" parent="Control/FirstRow/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="Control/FirstRow/MarginContainer/VBoxContainer/HBoxContainer2/GoldContainer"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
texture = ExtResource("7_m2a3c")
expand_mode = 1

[node name="Label" type="Label" parent="Control/FirstRow/MarginContainer/VBoxContainer/HBoxContainer2/GoldContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 30
text = "x 0"

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/FirstRow/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 37

[node name="HBoxContainer4" type="HBoxContainer" parent="Control/FirstRow/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 37

[node name="MarginContainer2" type="MarginContainer" parent="Control/FirstRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="menuOpenIcon" type="TextureRect" parent="Control/FirstRow/MarginContainer2"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture = ExtResource("8_hqbv5")
expand_mode = 1

[node name="MenuButton" type="Button" parent="Control/FirstRow/MarginContainer2/menuOpenIcon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_n02en")
theme_override_styles/hover = SubResource("StyleBoxFlat_n02en")
theme_override_styles/pressed = SubResource("StyleBoxFlat_n02en")

[node name="MenuCloseIcon" type="TextureRect" parent="Control/FirstRow/MarginContainer2"]
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
texture = ExtResource("9_3b2yp")
expand_mode = 1

[node name="MenuCloseButton" type="Button" parent="Control/FirstRow/MarginContainer2/MenuCloseIcon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_c4d25")
theme_override_styles/hover = SubResource("StyleBoxFlat_c4d25")
theme_override_styles/pressed = SubResource("StyleBoxFlat_c4d25")

[node name="MenuContainer" type="VBoxContainer" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100

[node name="SettingButton" type="TextureButton" parent="Control/MenuContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_left = NodePath("../ExitButton")
focus_neighbor_top = NodePath("../ExitButton")
focus_neighbor_right = NodePath("../ExitButton")
focus_neighbor_bottom = NodePath("../ExitButton")
focus_next = NodePath("../ExitButton")
focus_previous = NodePath("../ExitButton")
texture_normal = ExtResource("10_yo2uh")
texture_pressed = ExtResource("10_yo2uh")
texture_hover = ExtResource("10_yo2uh")
texture_focused = ExtResource("11_jb2vj")

[node name="Label" type="Label" parent="Control/MenuContainer/SettingButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = -11.5
offset_right = 29.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 40
text = "Settings"

[node name="ExitButton" type="TextureButton" parent="Control/MenuContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_left = NodePath("../SettingButton")
focus_neighbor_top = NodePath("../SettingButton")
focus_neighbor_right = NodePath("../SettingButton")
focus_neighbor_bottom = NodePath("../SettingButton")
focus_next = NodePath("../SettingButton")
focus_previous = NodePath("../SettingButton")
texture_normal = ExtResource("10_yo2uh")
texture_pressed = ExtResource("10_yo2uh")
texture_hover = ExtResource("10_yo2uh")
texture_focused = ExtResource("11_jb2vj")

[node name="Label" type="Label" parent="Control/MenuContainer/ExitButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = -11.5
offset_right = 29.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_font_sizes/font_size = 40
text = "Leave"

[node name="SettingMenu" parent="Control" instance=ExtResource("12_vl4ng")]
visible = false
layout_mode = 1

[connection signal="pressed" from="Control/FirstRow/MarginContainer2/menuOpenIcon/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="Control/FirstRow/MarginContainer2/MenuCloseIcon/MenuCloseButton" to="." method="_on_menu_close_button_pressed"]
[connection signal="pressed" from="Control/MenuContainer/SettingButton" to="." method="_on_setting_button_pressed"]
[connection signal="pressed" from="Control/MenuContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="close_window" from="Control/SettingMenu" to="." method="_on_setting_menu_close_window"]
